// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Testing: RecipesBlock > should render 1`] = `
<div>
  <div
    class="_recipesBlockWrapper_4b0ee0"
  >
    <div
      class="_recipeCardWrapper_a06f98"
    >
      <div
        class="_recipeContainer_a06f98"
      >
        <img
          class="_recipeCardImage_a06f98"
          id="00000000-0000-0000-0000-000000000001"
          src="test/image/src/1"
        />
        <div
          class="_recipeData_a06f98"
        >
          <div
            class="_recipeName_a06f98"
          >
            Test Recipe 1
          </div>
          <div
            class="_recipeType_a06f98"
          >
            Рыба
          </div>
          <div
            class="_buttonsPanel_a06f98"
          >
            <button
              class="_buttonWrapper_89d844 _recipeEditButton_a06f98"
            >
              <img
                alt="Edit Recipe Button"
                class="_recipeCardLogo_a06f98"
                src="/src/assets/pencil.svg"
              />
            </button>
            <button
              class="_buttonWrapper_89d844 _recipeEditButton_a06f98"
            >
              <img
                alt="Show Recipe Button"
                class="_recipeCardLogo_a06f98"
                src="/src/assets/eye.svg"
              />
            </button>
          </div>
        </div>
      </div>
    </div>
    <div
      class="_recipeCardWrapper_a06f98"
    >
      <div
        class="_recipeContainer_a06f98"
      >
        <img
          class="_recipeCardImage_a06f98"
          id="00000000-0000-0000-0000-000000000002"
          src="test/image/src/2"
        />
        <div
          class="_recipeData_a06f98"
        >
          <div
            class="_recipeName_a06f98"
          >
            Test Recipe 2
          </div>
          <div
            class="_recipeType_a06f98"
          >
            Мясо
          </div>
          <div
            class="_buttonsPanel_a06f98"
          >
            <button
              class="_buttonWrapper_89d844 _recipeEditButton_a06f98"
            >
              <img
                alt="Edit Recipe Button"
                class="_recipeCardLogo_a06f98"
                src="/src/assets/pencil.svg"
              />
            </button>
            <button
              class="_buttonWrapper_89d844 _recipeEditButton_a06f98"
            >
              <img
                alt="Show Recipe Button"
                class="_recipeCardLogo_a06f98"
                src="/src/assets/eye.svg"
              />
            </button>
          </div>
        </div>
      </div>
    </div>
    <div
      class="_recipeCardWrapper_a06f98"
    >
      <div
        class="_recipeContainer_a06f98"
      >
        <img
          class="_recipeCardImage_a06f98"
          id="00000000-0000-0000-0000-000000000003"
          src="test/image/src/3"
        />
        <div
          class="_recipeData_a06f98"
        >
          <div
            class="_recipeName_a06f98"
          >
            Test Recipe 3
          </div>
          <div
            class="_recipeType_a06f98"
          >
            Овощи
          </div>
          <div
            class="_buttonsPanel_a06f98"
          >
            <button
              class="_buttonWrapper_89d844 _recipeEditButton_a06f98"
            >
              <img
                alt="Edit Recipe Button"
                class="_recipeCardLogo_a06f98"
                src="/src/assets/pencil.svg"
              />
            </button>
            <button
              class="_buttonWrapper_89d844 _recipeEditButton_a06f98"
            >
              <img
                alt="Show Recipe Button"
                class="_recipeCardLogo_a06f98"
                src="/src/assets/eye.svg"
              />
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Testing: RecipesBlock > should render if have not found recipe 1`] = `
<div>
  <div
    class="_recipesServiceWrapper_4b0ee0"
  >
    <img
      class="_recipesBlockLogo_4b0ee0"
      src="/src/assets/pancakes.svg"
    />
    <div
      class="_emptyMessage_4b0ee0"
    >
      Рецепты не найдены
    </div>
  </div>
</div>
`;

exports[`Testing: RecipesBlock > should render if there are no recipes 1`] = `
<div>
  <div
    class="_recipesServiceWrapper_4b0ee0"
  >
    <img
      class="_recipesBlockLogo_4b0ee0"
      src="/src/assets/hand-drawn-food.svg"
    />
    <div
      class="_emptyMessage_4b0ee0"
    >
      Добавьте первый рецепт
    </div>
  </div>
</div>
`;
